--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URI=mongodb://127.0.0.1/your-database-name
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+DATABASE_URI=DATABASE_URI=mongodb://127.0.0.1/payload-issue-lexical-nested-blocks
+PAYLOAD_SECRET=123123123fg3rg223r
